--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
 <span>
     Select theme:
 </span>
-    <div class="theme-selector" id="def" onclick="defaultTheme(); theme()">Default</div>
-<div class="theme-selector" id="light" onclick="lightTheme(); theme()">Light</div>
+    <div class="theme-selector" id="def" onclick="defaultTheme()">Default</div>
+<div class="theme-selector" id="light" onclick="lightTheme()">Light</div>
 <div class="theme-selector" id="bnw" onclick="paperTheme()">Paper</div>
 <div class="theme-selector" id="cnsl" onclick="consoleTheme()">_Console</div>
 
     </div>
     </div>
+
     
 </body>
 
